--- a/Chat_App/requirements.txt
+++ b/Chat_App/requirements.txt
@@ -5,7 +5,6 @@ daphne==4.0.0
 channels-redis==4.0.0
 python-socketio==5.8.0
 eventlet==0.33.3
-gevent==22.10.2
 psycopg2-binary==2.9.7
 redis==5.0.10
 django-cors-headers==4.1.0
@@ -14,4 +13,4 @@ cryptography==41.0.2
 python-decouple==3.9
 pymongo==4.4.1
 whitenoise==6.5.0
-
+mysqlclient
