--- a/Chat_App/requirements.txt
+++ b/Chat_App/requirements.txt
@@ -5,7 +5,7 @@ daphne==4.0.0
 channels-redis==4.0.0
 python-socketio==5.8.0
 eventlet==0.33.3
-redis==5.0.10
+redis
 django-cors-headers==4.1.0
 PyJWT==2.8.0
 cryptography==41.0.2
